# serializer version: 1
# name: test_platform_setup_and_discovery[cover.bedroom_blinds_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.bedroom_blinds_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.thdfxdqqlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.bedroom_blinds_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'curtain',
      'friendly_name': 'bedroom blinds Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.bedroom_blinds_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[cover.blinds_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.blinds_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.nr26obpclccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.blinds_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 36,
      'device_class': 'curtain',
      'friendly_name': 'blinds Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.blinds_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.garage_door_door_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.garage_door_door_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GARAGE: 'garage'>,
    'original_icon': None,
    'original_name': 'Door 1',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': 'indexed_door',
    'unique_id': 'tuya.q3iie9vjd4wfqyy1qzkmkcswitch_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.garage_door_door_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'garage',
      'friendly_name': 'Garage door  Door 1',
      'supported_features': <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.garage_door_door_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.kit_blinds_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.kit_blinds_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.xR2ASpOQgAAqu7Drlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.kit_blinds_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'curtain',
      'friendly_name': 'Kit-Blinds Curtain',
      'supported_features': <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.kit_blinds_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds_blind-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.kitchen_blinds_blind',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': 'Blind',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'blind',
    'unique_id': 'tuya.ftvxinxevpy21tbelcswitch_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds_blind-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'blind',
      'friendly_name': 'Kitchen Blinds Blind',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.kitchen_blinds_blind',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.kitchen_blinds_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.dke76hazlccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.kitchen_blinds_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 48,
      'device_class': 'curtain',
      'friendly_name': 'Kitchen Blinds Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.kitchen_blinds_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.lounge_dark_blind_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.lounge_dark_blind_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.g1efxsqnp33cg8r3lccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.lounge_dark_blind_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'Lounge Dark Blind Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.lounge_dark_blind_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.pergola_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.pergola_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.shga3pmbkwhthvqxgklccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.pergola_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'Pergola Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.pergola_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.persiana_do_quarto_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.persiana_do_quarto_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.ikbbdbnqsd70pc1glccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.persiana_do_quarto_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'Persiana do Quarto Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.persiana_do_quarto_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.roller_shutter_living_room_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.roller_shutter_living_room_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.jzpap0inhkykqtlwgklccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.roller_shutter_living_room_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 75,
      'device_class': 'curtain',
      'friendly_name': 'Roller shutter Living Room Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.roller_shutter_living_room_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[cover.tapparelle_studio_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.tapparelle_studio_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.2w46jyhngklccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.tapparelle_studio_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 0,
      'device_class': 'curtain',
      'friendly_name': 'Tapparelle studio Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.tapparelle_studio_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[cover.vividstorm_screen_curtain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.vividstorm_screen_curtain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.CURTAIN: 'curtain'>,
    'original_icon': None,
    'original_name': 'Curtain',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'curtain',
    'unique_id': 'tuya.4hbnivc4w2rsw966lccontrol',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cover.vividstorm_screen_curtain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'device_class': 'curtain',
      'friendly_name': 'VIVIDSTORM SCREEN Curtain',
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.vividstorm_screen_curtain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
